--- a/oibsip_task2/index.html
+++ b/oibsip_task2/index.html
@@ -37,7 +37,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, my name is</div>
-                <div class="text-2">Jithendra Varma Chamarthi</div>
+                <div class="text-2">Krishna Priya Nainnapaggari</div>
                 <div class="text-3">And I'm a <span class="typing"></span></div>
                 <a href="#">Hire me</a>
             </div>
@@ -53,7 +53,7 @@
                     <img src="images/Profilenobg.png" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Jithendra and I'm a <span class="typing-2"></span></div>
+                    <div class="text">I'm priya and I'm a <span class="typing-2"></span></div>
                     <p>I am a final year student at Sree Vidyanikethan Engineering College and an enthusiast in Data Structures & Algorithms and Web development. During my internship at Exposys Data Labs, I explored myself in the field of software
                         programming and gained confidence while working with people collaboratively on different projects. During the last three years in the college, I have worked extensively on object-oriented programming and Python and made several contributions.
                         I have been working on several projects in a team environment and gained a good understanding of the Software development life cycle. Having spent the past 2 summers working on projects such as SHORTEST PATH TO COLLECT THE PACKAGES with PYTHON, I have not only developed robust problem-solving skills, but also a flair for Test-driven development</p>
@@ -131,7 +131,7 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Jithendra Varma Chamarthi</div>
+                                <div class="sub-title">Krishna Priya Nainnapagari</div>
                             </div>
                         </div>
                         <div class="row">
@@ -145,7 +145,7 @@
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">jithendra9367@gmail.com</div>
+                                <div class="sub-title">krishnaapriya27@gmail.com</div>
                             </div>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
 
     <!-- footer section start -->
     <footer>
-        <span>Created By <a href="https://jithendra9367.wixsite.com/jithendravarmac">Jithendra</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
+        <span>Created By <a href="">Priya</a> | <span class="far fa-copyright"></span> 2022 All rights reserved.</span>
     </footer>
 
     <script src="script.js"></script>
